<resources>
    <string name="app_name">Chatter</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="log_in">Log-In</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="open">Open Navigation Bar</string>
    <string name="close">Close Navigation Bar</string>
    <string name="email">Email:</string>
    <string name="emailOr">Username, Email or Phone number:</string>
    <string name="password">Password:</string>
    <string name="chatter_welcomes_you">Chatter welcomes you</string>
    <string name="not_a_member_in_chatter_sign_up_right_now">Not a member in Chatter? Sign-Up right now</string>
    <string name="username">Username:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="birth">Birth:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="hello_new_chatter">Hello, new chatter</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="first_amp_last_name"><![CDATA[First & Last Name:]]></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="verify">Verify</string>
    <string name="if_you">If you didn\'t receive an email click the verify button, click it again once you have verified your account to finish verification process.</string>
    <string name="_verifyEmail">Please check the inbox of your email</string>
    <string name="verifyEmail_">and verify your account to use Chatter, otherwise your account will be suspended.</string>
    <string name="chats">Chats</string>
    <string name="chatters">Chatters</string>
    <string name="account">Account</string>
    <string name="your_chatter_account">Your Chatter account</string>
    <string name="chatter_account">Chatter Account</string>
    <string name="chat_chatters">Chat Chatters</string>
    <string name="chatter_ai">Chatter AI</string>
    <string name="system">System</string>
    <string name="log_out">Log-Out</string>
    <string name="report">Report</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message">Message…</string>
    <string name="no_chatters_to_chat_with_yet">No chatters to chat with yet.</string>
    <string name="search_chatters">Search Chatters…</string>
    <string name="no_chatter_was_found">No matching Chatters were found.</string>
    <string name="gender">Gender:</string>
    <string name="chats_with">Chats with:</string>
    <string name="full_name_hint">Full name has to be in the form of \"Firstname Lastname\".\ne.g: Mustafa Muhammad.</string>
    <string name="username_hint">Username has to be unique, must not include (\'.\', \'#\', \'$\', \'[\', \']\', \'|\') over 3 characters and have no spaces.\ne.g: H2SO4–1191.</string>
    <string name="email_hint">Email has to be unique and in the form of an actual email address.\ne.g: example@example.example.</string>
    <string name="phone_hint">Phone number has to be unique, without spaces and in the form of an actual phone number with \'+\' and country code so do not write the trunk prefix (the first \'0\').\n-Tap the map for country codes.\ne.g: +964??????????.</string>
    <string name="password_hint">Password has to of be 6 characters or more.\ne.g: 1q2w3e.</string>
    <string name="confirm_password_hint">Confirm password has to match the password.</string>
    <string name="birth_hint">Tap the Birth field and pick your birth from the calender, tap the year to scroll through years faster.\ne.g: 07/01/2004</string>
    <string name="gender_hint">Tap on one of the buttons to choose your gender, male or female.</string>
    <string name="profile_picture_hint">Tap on the circle to add an avatar, or hold the pen and skip it.</string>
    <string name="cannot_be_edited">This field cannot be edited.</string>
    <string name="edit_mode">Edit Mode.</string>
    <string name="save_changes">Do you wish to save changes?</string>
    <string name="discard_changes">Do you wish to discard changes?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="reset_sent">Reset email had been sent to </string>
    <string name="fill_first">Fill in the fields first.</string>
    <string name="passwords_not_match">Password and confirm password do not match.</string>
    <string name="passwords_must">Password must be 6 chars or more.</string>
    <string name="updated_password">Password had been updated.</string>
    <string name="incorrect_password">Incorrect Password.</string>
    <string name="say_hello">Say Hello!</string>
    <string name="ask">Ask Chatter AI</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen: </string>
    <string name="logout_confirm">Are you certain that you wish to log-out?</string>
    <string name="pen_guide">The pen will be your guide, tap it when guidance is needed.</string>
    <string name="already_registered">is already registered.</string>
    <string name="invalid_format">Invalid format</string>
    <string name="to_skip">To skip avatar hold the pen.</string>
    <string name="double_check">Double check your information please.</string>
    <string name="seen">Seen</string>
    <string name="typing">Typing…</string>
    <string name="aboutApp1">Chatter is a real–time messaging app developed by Mustafa Muhammad, aka H2SO4–1191…\nBuilt with passion and dedication, it was developed entirely in Android Studio using Kotlin and XML, featuring both a robust frontend and backend…\nPowered by a server that\'s online 24/7, Chatter mimics the functionalities of popular chat platforms while introducing a unique feature—a built–in generative AI for interactive conversations…\nWhile it may not rival the largest apps, it still stands as a testament to the hard work and the hours spent in its development. I hope you appreciate this creation as much as I do in bringing it to life…\n</string>
    <string name="aboutApp2">And I would like to note that your log-in password is completely secured and safe that even I can\'t access your account, but to keep in mind, the messages and chat records do get saved in a database but they won\'t be accessed if not necessary for developing goals…\nUnfortunately the database for Chatter is currently limited for it being just a test and hobby app so it is not clear what would happen to it in the future, meaning if you have really important information or chats it is not advised to rely on it…\n</string>
    <string name="aboutApp3">In the mean time the app had been tested several times for bug hunts and currently it is quite clean, but if you encounter any please do contact me (Check contacting information down below) and describe the issue so I can work on it as soon as possible for a better user experience…\nIn this the very moment as I\'m writing this paragraph for you, I cannot describe the joy and pride that I am feeling for overcoming all of the challenges that I had faced during the development phase, I guess it is the joy of creation and creativity…\nAnd in the end of my message, I would like to give special thanks from me, H2SO4–1191 to you, my dear users…\nFeel free to contact me on:\n\nInstagram: H2SO4.1191\nPhone: +964 782 242 7149\n\n\n25.SEP.2024</string>
</resources>