<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24" />
        <item android:id="@+id/contacts"
            android:title="@string/contacts"
            android:icon="@drawable/baseline_contacts_24" />
        <item android:id="@+id/gallery"
            android:title="@string/gallery"
            android:icon="@drawable/baseline_image_24" />
    </group>
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24">
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/about"
                    android:title="@string/about"
                    android:icon="@drawable/baseline_info_24" />
                <item android:id="@+id/loginDoor"
                    android:title="@string/log_in"
                    android:icon="@drawable/baseline_login_24" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/conunication"
        android:title="@string/communication"
        android:icon="@drawable/baseline_call_24" >
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/share"
                    android:title="@string/share"
                    android:icon="@drawable/baseline_share_24" />
                <item android:id="@+id/rate"
                    android:title="@string/rate"
                    android:icon="@drawable/baseline_star_24" />
            </group>
        </menu>
    </item>
</menu>