<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatter_home_background"
    tools:context=".controller.SignupActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/hello_new_chatter"
        android:textAlignment="center"
        android:textColor="@color/seriousYellow"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/birth"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/maleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        tools:visibility="visible" />

    <ToggleButton
        android:id="@+id/maleButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/male_switch"
        android:fontFamily="@font/alike_angular"
        android:text="@string/m"
        android:textAlignment="center"
        android:textColor="#4cc9f0"
        android:textOff="@string/m"
        android:textOn="@string/m"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/femaleButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameField"
        tools:visibility="visible" />

    <Button
        android:id="@+id/pen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:enabled="false"
        android:foreground="@drawable/baseline_edit_24"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/femaleButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/female_switch"
        android:fontFamily="@font/alike_angular"
        android:text="@string/f"
        android:textAlignment="center"
        android:textColor="#ff006e"
        android:textOff="@string/f"
        android:textOn="@string/f"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/maleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/maleButton"
        app:layout_constraintTop_toTopOf="@+id/maleButton"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fly"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        tools:layout_editor_absoluteX="23dp" />

    <TextView
        android:id="@+id/drop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/userNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <TextView
        android:id="@+id/gap"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameField" />

</androidx.constraintlayout.widget.ConstraintLayout>