<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changePasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/chatter_home_background">

    <EditText
        android:id="@+id/currentPasswordChange"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/seriousYellow"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showAll"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/showAll"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:foreground="@android:drawable/ic_menu_view"
        android:foregroundTint="@color/seriousYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/currentPasswordChange"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/currentPasswordChange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/forgotPasswordChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/alike_angular"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/seriousYellow"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/currentPasswordChange"
        app:layout_constraintStart_toStartOf="@+id/currentPasswordChange"
        app:layout_constraintTop_toBottomOf="@+id/currentPasswordChange" />

    <EditText
        android:id="@+id/newPasswordChange"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/seriousYellow"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/currentPasswordChange"
        app:layout_constraintStart_toStartOf="@id/currentPasswordChange"
        app:layout_constraintTop_toBottomOf="@id/currentPasswordChange" />

    <EditText
        android:id="@+id/confirmNewPasswordChange"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/seriousYellow"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/newPasswordChange"
        app:layout_constraintStart_toStartOf="@id/newPasswordChange"
        app:layout_constraintTop_toBottomOf="@id/newPasswordChange" />

    <ProgressBar
        android:id="@+id/checkingPasswords"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/seriousYellow"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordChange"
        app:flow_firstHorizontalBias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinner_background"
        android:fontFamily="@font/alike_angular"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSubmit" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/spinner_background"
        android:fontFamily="@font/alike_angular"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordChange"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>