<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatter_home_background"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".activities.EnteringActivity">

    <EditText
        android:id="@+id/inputField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/emailOr"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="50dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/seriousYellow"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/inputField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/inputField"
        app:layout_constraintTop_toBottomOf="@+id/inputField" />

    <Button
        android:id="@+id/loginDoor"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="300dp"
        android:backgroundTint="#00000000"
        android:enabled="false"
        android:fontFamily="serif"
        android:foreground="@drawable/baseline_login_24"
        android:foregroundTint="@color/seriousYellow"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/passwordField"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintTop_toTopOf="@+id/inputField"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/chatter_welcomes_you"
        android:textAlignment="center"
        android:textColor="@color/seriousYellow"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/not_a_member_in_chatter_sign_up_right_now"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpPen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/signUpPen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/signUpPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signUpPrompt"
        app:layout_constraintTop_toTopOf="@+id/signUpPrompt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="226dp"
        android:layout_marginEnd="185dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.55"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:foreground="@android:drawable/ic_menu_view"
        android:foregroundTint="@color/seriousYellow"
        app:layout_constraintBottom_toBottomOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/passwordField"
        app:layout_constraintTop_toTopOf="@+id/passwordField" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/alike_angular"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:textColor="@color/seriousYellow"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintStart_toStartOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/seriousYellowAlpha"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/passwordField"
        app:layout_constraintStart_toEndOf="@+id/inputField"
        app:layout_constraintTop_toTopOf="@+id/inputField"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>